--- a/styles.css
+++ b/styles.css
@@ -244,3 +244,16 @@ margin-top: 200px;}
 
 }
 
+@media (max-width: 412px){
+ 
+    nav ul li a {
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+        padding: 5px 5px;
+        transition: color 0.3s;
+      
+       
+    
+    }
+}
